meta fix and contrast correction

--- a/lesson-3/css/normalize.css
+++ b/lesson-3/css/normalize.css
@@ -93,7 +93,7 @@ footer {
 }
 
 footer a {
-    color:blueviolet
+    color:rgb(46, 25, 236)
 }
 
 
